--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flame:
-  get:
+  flame_bloc:
+  equatable:
+  flutter_bloc:
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
