--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   equatable:
   flutter_bloc:
   google_fonts:
+  flutter_animate:
+  flutter_soloud:
+  get_it: 
+
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/background/
+    - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
